--- a/googleclass.md/index.html
+++ b/googleclass.md/index.html
@@ -603,6 +603,7 @@
       />
   </a>
     </span></p>
+<p>'과제'를 누르면 다음 화면으로 넘어갈 수 있습니다. </p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto;  max-width: 590px;"
@@ -636,7 +637,7 @@
   </a>
     </span></p>
 <p>과제를 설정하는 화면입니다.</p>
-<p>과제를 누르고 다음 화면으로 넘어오면 과제 제목과 안내사항(선택사항)을 입력할 수 있습니다.</p>
+<p>과제 제목과 안내사항(선택사항)을 입력할 수 있습니다.</p>
 <p>우측에는 과제의 기한을 설정할 수 있습니다.</p>
 <p>설정이 완료되었다면 우측 상단에 과제 만들기 버튼을 클릭하면 과제 할당이 완료됩니다.</p>
 <p><span
