--- a/Pytorch05/index.html
+++ b/Pytorch05/index.html
@@ -533,9 +533,11 @@
 </ul></div></div><div class="blog-post-content"><h2 id="희소-표현sparce-representation" style="position:relative;"><a href="#%ED%9D%AC%EC%86%8C-%ED%91%9C%ED%98%84sparce-representation" aria-label="희소 표현sparce representation permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>희소 표현(Sparce Representation)</h2>
 <p>희소 표현이란 데이터가 희소하다는 의미입니다. 여기서 데이터란 '우리가 관심을 갖는, 의미있는 정보'정도로 해석할 수 있을 것 같습니다.</p>
 <p>이해하기 쉽게 예를 들어 설명해봅시다.</p>
-<div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text">[0, 1, 0, 0, 0, 0, 0, 0, 0]
-[0, 0, 0, 1, 0, 0, 0, 0, 0]
-[0, 0, 0, 0, 0, 0, 1, 0, 0]</code></pre></div>
+<div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text">[1, 0, 0, 0, 0, 0, 0, 0, 0]
+[0, 1, 0, 0, 0, 0, 0, 0, 0]
+[0, 0, 1, 0, 0, 0, 0, 0, 0]
+
+...</code></pre></div>
 <p>위의 벡터들은 희소 벡터라고 할 수 있습니다. 우리가 알고싶어 하는 정보의 인덱스만 1로 표현되고, 나머지 원소들은 0으로 이루어진 벡터입니다. 따라서 실제 표현하는 데이터의 양은 희소(Sparse)하며, 데이터를 표현하지 않는 나머지는 모두 0으로 표현됩니다.</p>
 <p>이와 같이 표현하는 것을 희소 표현이라고 합니다.</p>
 <p>지난 <a href="https://mintyu.github.io/Pytorch04/" target="_blank" rel="nofollow noopener noreferrer">원-핫 인코딩</a> 게시물에서 배운 원-핫 인코딩을 통해 나온 원-핫 벡터 또한 희소 벡터입니다.</p>
